crates/nash-can/tests/snapshots/kinds__self_application_fails_before_value_annotation_checking.snap
---
source: crates/nash-can/tests/kinds.rs
description: "module Main exposing (..)\n\nimport Primitive exposing (..)\nimport Builtin exposing (..)\n\ntype self 'f = Self ('f 'f)\nidentity : self self -> self self\nidentity x = x\n"
info: diagnostic
---
nash::names::kind_infinite

  × This application in field 1 of little constructor `Self` in `self` would require
  │ an infinite kind:
   ╭─[src/Main.nash:6:25]
 5 │ 
 6 │ type self 'f = Self ('f 'f)
   ·                         ──
 7 │ identity : self self -> self self
   ╰────
  help: Check the type application and the kinds of its arguments.
