crates/nash-can/tests/snapshots/kinds__storable_annotation_adds_a_representation_predicate.snap
---
source: crates/nash-can/tests/kinds.rs
description: "module Main exposing (..)\n\nimport Builtin exposing (..)\n\ntype alias xs ('a : Storable) = list 'a\n"
---
(
    [],
    [
        (
            "xs",
            Arrow(
                Type,
                Type,
            ),
            [
                Implied {
                    trait_: QualifiedName {
                        home: ModuleName {
                            package: Some(
                                PackageName {
                                    author: "nash",
                                    project: "core",
                                    version: "",
                                    source: Compiler,
                                    compilation: None,
                                },
                            ),
                            name: "Builtin",
                        },
                        name: "Storable",
                    },
                    args: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 5,
                                    column: 38,
                                },
                                end: Position {
                                    line: 5,
                                    column: 40,
                                },
                            },
                            value: Var(
                                "a",
                            ),
                        },
                    ],
                },
            ],
        ),
    ],
)
