crates/nash-can/tests/snapshots/kinds__supplied_obligation_01.snap
---
source: crates/nash-can/tests/kinds.rs
expression: errors
---
[
    KindMismatch {
        region: Region {
            start: Position {
                line: 4,
                column: 13,
            },
            end: Position {
                line: 4,
                column: 18,
            },
        },
        context: LittleField {
            union: "w",
            ctor: "W",
            index: 0,
        },
        expected: KindScheme {
            bounds: [
                KindSet(
                    7,
                ),
            ],
            kind: Var(
                0,
            ),
            applications: [],
        },
        actual: KindScheme {
            bounds: [],
            kind: Constructor {
                scheme: KindScheme {
                    bounds: [
                        KindSet(
                            8,
                        ),
                        KindSet(
                            8,
                        ),
                        KindSet(
                            15,
                        ),
                        KindSet(
                            15,
                        ),
                        KindSet(
                            7,
                        ),
                    ],
                    kind: Arrow(
                        Var(
                            0,
                        ),
                        Arrow(
                            Var(
                                1,
                            ),
                            Arrow(
                                Var(
                                    2,
                                ),
                                Base(
                                    Term,
                                ),
                            ),
                        ),
                    ),
                    applications: [
                        KindApplication {
                            head: Var(
                                0,
                            ),
                            arguments: [
                                Var(
                                    0,
                                ),
                                Var(
                                    2,
                                ),
                            ],
                            result: Var(
                                3,
                            ),
                        },
                        KindApplication {
                            head: Var(
                                1,
                            ),
                            arguments: [
                                Var(
                                    3,
                                ),
                            ],
                            result: Var(
                                4,
                            ),
                        },
                    ],
                },
                arguments: [
                    Constructor {
                        scheme: KindScheme {
                            bounds: [
                                KindSet(
                                    8,
                                ),
                                KindSet(
                                    8,
                                ),
                                KindSet(
                                    15,
                                ),
                                KindSet(
                                    15,
                                ),
                                KindSet(
                                    7,
                                ),
                            ],
                            kind: Arrow(
                                Var(
                                    0,
                                ),
                                Arrow(
                                    Var(
                                        1,
                                    ),
                                    Arrow(
                                        Var(
                                            2,
                                        ),
                                        Base(
                                            Term,
                                        ),
                                    ),
                                ),
                            ),
                            applications: [
                                KindApplication {
                                    head: Var(
                                        0,
                                    ),
                                    arguments: [
                                        Var(
                                            0,
                                        ),
                                        Var(
                                            2,
                                        ),
                                    ],
                                    result: Var(
                                        3,
                                    ),
                                },
                                KindApplication {
                                    head: Var(
                                        1,
                                    ),
                                    arguments: [
                                        Var(
                                            3,
                                        ),
                                    ],
                                    result: Var(
                                        4,
                                    ),
                                },
                            ],
                        },
                        arguments: [],
                    },
                    Constructor {
                        scheme: KindScheme {
                            bounds: [
                                KindSet(
                                    8,
                                ),
                                KindSet(
                                    8,
                                ),
                                KindSet(
                                    15,
                                ),
                                KindSet(
                                    15,
                                ),
                                KindSet(
                                    7,
                                ),
                            ],
                            kind: Arrow(
                                Var(
                                    0,
                                ),
                                Arrow(
                                    Var(
                                        1,
                                    ),
                                    Arrow(
                                        Var(
                                            2,
                                        ),
                                        Base(
                                            Term,
                                        ),
                                    ),
                                ),
                            ),
                            applications: [
                                KindApplication {
                                    head: Var(
                                        0,
                                    ),
                                    arguments: [
                                        Var(
                                            0,
                                        ),
                                        Var(
                                            2,
                                        ),
                                    ],
                                    result: Var(
                                        3,
                                    ),
                                },
                                KindApplication {
                                    head: Var(
                                        1,
                                    ),
                                    arguments: [
                                        Var(
                                            3,
                                        ),
                                    ],
                                    result: Var(
                                        4,
                                    ),
                                },
                            ],
                        },
                        arguments: [],
                    },
                ],
            },
            applications: [],
        },
    },
]
