crates/nash-can/tests/snapshots/kinds__supplied_obligation_02.snap
---
source: crates/nash-can/tests/kinds.rs
expression: errors
---
[
    KindMismatch {
        region: Region {
            start: Position {
                line: 4,
                column: 13,
            },
            end: Position {
                line: 4,
                column: 22,
            },
        },
        context: LittleField {
            union: "w",
            ctor: "W",
            index: 0,
        },
        expected: KindScheme {
            bounds: [
                KindSet(
                    8,
                ),
            ],
            kind: Var(
                0,
            ),
            applications: [],
        },
        actual: KindScheme {
            bounds: [
                KindSet(
                    7,
                ),
            ],
            kind: Var(
                0,
            ),
            applications: [],
        },
    },
]
