crates/nash-can/tests/snapshots/kinds__supplied_obligation_03.snap
---
source: crates/nash-can/tests/kinds.rs
expression: kinds
---
[
    (
        "tag",
        KindScheme {
            bounds: [
                KindSet(
                    15,
                ),
            ],
            kind: Arrow(
                Var(
                    0,
                ),
                Base(
                    Term,
                ),
            ),
            applications: [],
        },
    ),
    (
        "s",
        KindScheme {
            bounds: [
                KindSet(
                    8,
                ),
                KindSet(
                    8,
                ),
                KindSet(
                    15,
                ),
                KindSet(
                    15,
                ),
                KindSet(
                    7,
                ),
            ],
            kind: Arrow(
                Var(
                    0,
                ),
                Arrow(
                    Var(
                        1,
                    ),
                    Arrow(
                        Var(
                            2,
                        ),
                        Base(
                            Term,
                        ),
                    ),
                ),
            ),
            applications: [
                KindApplication {
                    head: Var(
                        0,
                    ),
                    arguments: [
                        Var(
                            0,
                        ),
                        Var(
                            2,
                        ),
                    ],
                    result: Var(
                        3,
                    ),
                },
                KindApplication {
                    head: Var(
                        1,
                    ),
                    arguments: [
                        Var(
                            3,
                        ),
                    ],
                    result: Var(
                        4,
                    ),
                },
            ],
        },
    ),
    (
        "w",
        KindScheme {
            bounds: [],
            kind: Base(
                Term,
            ),
            applications: [],
        },
    ),
]
