crates/nash-can/tests/snapshots/kinds__supplied_obligation_04.snap
---
source: crates/nash-can/tests/kinds.rs
expression: errors
---
[
    KindInfinite {
        region: Region {
            start: Position {
                line: 3,
                column: 30,
            },
            end: Position {
                line: 3,
                column: 32,
            },
        },
        context: LittleField {
            union: "s",
            ctor: "S",
            index: 0,
        },
    },
]
